2006-04-04  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/hn-wm.h (DESKTOP_BIN_FIELD): Rename to ...
	  (DESKTOP_EXEC_FIELD): ... this. Fix all users.
	  (hn_wm_lookup_watchable_app_via_exec): New function prototype.
	* hildon-navigator/hn-wm.c
	  (hn_wm_lookup_watchable_app_via_exec_find_func): New function.
	  (hn_wm_lookup_watchable_app_via_exec): Likewise.
	* hildon-navigator/hn-wm-watchable-app.h
	  (hn_wm_watchable_app_get_exec): New function prototype.
	* hildon-navigator/hn-wm-watchable-app.c (HNWMWatchableApp): Rename
	  bin_name to exec_name. Fix all users.
	  (hn_wm_watchable_app_new): Store exec_name in the app struct. Add
	  exec_name to the HN_DBG registering print call.
	  (hn_wm_watchable_app_get_exec): New function.

2006-04-04  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.7

	Applied fix to Close Application Dialog MEM-DIA001 is lost.
	(Closes N#24388)
	* Use lowmem state when deciding if CAD will be shown, preserves old
	  method as it probably won't be triggered ever (but just in case the
	  configurability is still wanted, it should work ok)
	* Reorganize code to make the dialog call only from hn-wm.c
	  and others-menu.c (all roads lead to hn_wm_top_service)
	* Fixes for behaviour
	* hildon-navigator/Makefile.am
	  hildon-navigator/close-application-dialog.h
	  hildon-navigator/close-application-dialog.c:
	  - Close application dialog implementation
	* hildon-navigator/hn-wm-util.h
	  hildon-navigator/hn-wm-util.c:
	  - New function hn_wm_get_vmdata_for_pid():
	    Fetches VMData value for specified pid from /proc/$PID/status
	* hildon-navigator/application-switcher.c
	   - Add dialog call to item activation
	* hildon-navigator/hn-wm-memory.h
	  hildon-navigator/hn-wm-memory.c:
	  - Add convenience function to get lowmem state without using
	    global variables in other files

2006-04-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Fixed possible leaks of